test/expected/large/dataquality/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: dqsvc
    foo.com/duversion: 2.4.86-20190924.1569376639635
    foo.com/version: 2.4.86
  labels:
    app.kubernetes.io/name: dataquality
    helm.sh/chart: dataquality-2.4.86
  name: dataquality
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /dataQuality
    - uri:
        prefix: /dataQuality/
    route:
    - destination:
        host: dataquality.peekay.svc.cluster.local
